--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.0.13'
+    id 'com.github.johnrengelman.shadow' version '7.1.2'
 }
 
 repositories {
@@ -14,10 +15,9 @@ dependencies {
 }
 
 javafx {
-    version = "17"
+    version = '17'
     modules = [ 'javafx.controls', 'javafx.fxml' ]
 }
-
 
 application {
     mainClass = 'com.pacman.App'
@@ -27,3 +27,17 @@ tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8'
 }
 
+// Configurazione del fat‑jar con Shadow plugin
+shadowJar {
+    archiveBaseName.set('PacManStandalone')
+    archiveClassifier.set('')
+    archiveVersion.set('1.0')
+    manifest {
+        attributes 'Main-Class': 'com.pacman.App'
+    }
+    // Includi tutte le risorse (cartelle di risorse principali)
+    from(sourceSets.main.resources.srcDirs)
+}
+
+// Assicura che build generi anche lo shadowJar
+build.dependsOn shadowJar
